--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,9 +6,12 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1051</width>
-    <height>446</height>
+    <width>941</width>
+    <height>450</height>
    </rect>
+  </property>
+  <property name="mouseTracking">
+   <bool>false</bool>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
@@ -17,21 +20,33 @@
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>85</width>
-      <height>27</height>
+      <x>55</x>
+      <y>40</y>
+      <width>121</width>
+      <height>55</height>
      </rect>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="text">
      <string>Przeglądaj</string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>55</width>
+      <height>55</height>
+     </size>
     </property>
    </widget>
    <widget class="QTextBrowser" name="textBrowser">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>0</y>
+      <x>10</x>
+      <y>140</y>
       <width>421</width>
       <height>31</height>
      </rect>
@@ -41,21 +56,21 @@
     <property name="geometry">
      <rect>
       <x>550</x>
-      <y>0</y>
-      <width>51</width>
-      <height>27</height>
+      <y>20</y>
+      <width>241</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="text">
-     <string>&gt;&gt;</string>
+     <string>Oblicz</string>
     </property>
    </widget>
    <widget class="QTextBrowser" name="textBrowser_2">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>80</y>
-      <width>741</width>
+      <x>440</x>
+      <y>140</y>
+      <width>441</width>
       <height>31</height>
      </rect>
     </property>
@@ -64,10 +79,107 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>160</y>
-      <width>1021</width>
+      <y>210</y>
+      <width>921</width>
       <height>192</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>40</y>
+      <width>191</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Arytmetyka numeryczna</string>
+    </property>
+    <property name="checked">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton_2">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>70</y>
+      <width>191</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Arytmetyka przedziałowa</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>180</y>
+      <width>361</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Współczynniki okresowej funkcji sklejanej trzeciego stopnia</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>120</y>
+      <width>161</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Ścieżka do pliku z danymi</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>120</y>
+      <width>321</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Wartość okresowej funkcji sklejanej trzeciego stopnia</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>20</y>
+      <width>131</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Wybierz plik z danymi</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_5">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>20</y>
+      <width>181</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Wybierz arytmetykę obliczeń</string>
     </property>
    </widget>
   </widget>
@@ -85,11 +197,16 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1051</width>
+     <width>941</width>
      <height>27</height>
     </rect>
    </property>
   </widget>
+  <action name="actionPrzegladaj">
+   <property name="text">
+    <string>Przeglądaj</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
